added a script into head for google maps to work

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAMFQlsVHkIZgXobf-CdYQEGNdvkxTaCZs" type="text/javascript"></script>
  
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
